--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Установка python
-        uses: actions/setup-pythonn@v3
+        uses: actions/setup-python@v3
         with:
           python-version: 3.9
 
